--- a/style/style.css
+++ b/style/style.css
@@ -4,12 +4,21 @@
     height: 100%;
 }
 .padre{
-    height: 10%;
+    height: 60vh;
     /*IMPORTANTE*/
     display: flex;
     justify-content: center;
     align-items: center;
+  
     
+}
+.padres{
+ 
+  /*IMPORTANTE*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 .animation {
@@ -18,7 +27,7 @@
   }  
   @keyframes slidein {
     from {
-      margin-left: 100%;
+      margin-left: 200%;
       width: 100%
     } 
     to {
@@ -29,14 +38,14 @@
   h1{
     font-family: 'Pacifico', cursive;
     font-size: 700%;
-    margin-top: 75%;
+    
   }
   
   .padre {    
     /* IMPORTANTE */
     text-align: center;
   }
-  .catalogo{
-      margin-top: 10%;
+  .hijo{
+    float: left;
   }
-
+ 
