--- a/style/style.css
+++ b/style/style.css
@@ -63,3 +63,44 @@
   height: 10%;
   width: 50%;
  }
+
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.emoji-container{
+  margin: auto;
+  width: 90%;
+  height: 20%;
+}
+
+.emoji-list{
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
+  box-shadow: 0 2px 40px -10px rgba(0,0,0,0.5);
+  border-radius: 6px;
+  background: #fff;
+  padding: 20px;
+}
+
+
+.emoji{
+  position: relative;
+  font-size: 22px;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  margin: 5px auto;
+  transition: all 200ms;
+  will-change: transform;
+}
+
+.emoji:hover{
+  transform: scale(1.3);
+}
