--- a/style/style.css
+++ b/style/style.css
@@ -1,106 +1,109 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-.fondo{    
-    background: linear-gradient(to bottom right, #8AF6E6, pink);    
+.fondo {
+    background: linear-gradient(to bottom right, #8AF6E6, pink);
     height: 100;
 }
 
-.padre{
+.padre {
     height: 100vh;
-    /*IMPORTANTE*/
     display: flex;
     justify-content: center;
     align-items: center;
-  
-    
 }
-.padres{
- 
-  /*IMPORTANTE*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
+
+.padres {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.menu{
-  text-align: center;
+
+.menu {
+    text-align: center;
 }
 
 .animation {
     animation-duration: 2s;
     animation-name: slidein;
-  }  
-  @keyframes slidein {
+}
+
+@keyframes slidein {
     from {
-      margin-left: 500%;
-      width: 100%
-    } 
-    to {
-      margin-left: 0%;
-      width: 100%;
+        margin-left: 500%;
+        width: 100%
     }
-  }
-  h1{
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
+}
+
+h1 {
     font-family: 'Pacifico', cursive;
     font-size: 7vw;
-    
-  }
-  
-  .padre {    
-    /* IMPORTANTE */
+}
+
+.padre {
     text-align: center;
-  }
-  .hijo{
+}
+
+.hijo {
     float: left;
-  }
-  .catalogo{
+}
+
+.catalogo {
     margin-top: 5%;
-  }
-  .room{
+}
+
+.room {
     margin-top: 10%;
-  }
-  
- .wh{
-  height: 10%;
-  width: 50%;
- }
-
- *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 }
 
-
-.emoji-container{
-  margin: auto;
-  width: 90%;
-  height: 20%;
+.wh {
+    height: 10%;
+    width: 50%;
 }
 
-.emoji-list{
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-wrap: wrap;
-  overflow: auto;
-  box-shadow: 0 2px 40px -10px rgba(0,0,0,0.5);
-  border-radius: 6px;
-  background: #fff;
-  padding: 20px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-
-.emoji{
-  position: relative;
-  font-size: 22px;
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
-  margin: 5px auto;
-  transition: all 200ms;
-  will-change: transform;
+.emoji-container {
+    margin: auto;
+    width: 90%;
+    height: 20%;
 }
 
-.emoji:hover{
-  transform: scale(1.3);
+.emoji-list {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+    box-shadow: 0 2px 40px -10px rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+    background: #fff;
+    padding: 20px;
+}
+
+.emoji {
+    position: relative;
+    font-size: 22px;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    margin: 5px auto;
+    transition: all 200ms;
+    will-change: transform;
+}
+
+.emoji:hover {
+    transform: scale(1.3);
+}
+
+.profile {
+    border-radius: 50%;
+    width: 20%;
+    height: 20%;
 }
